--- a/app/package.json
+++ b/app/package.json
@@ -7,5 +7,25 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-mounter": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.4.0",
+    "babel-plugin-react-require": "^2.1.0",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
+    "chai": "^3.4.1",
+    "enzyme": "^1.3.1",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.15.0",
+    "mocha": "^2.3.4",
+    "react-addons-test-utils": "^0.14.6",
+    "sinon": "^1.17.2"
+  }
 }
