--- a/app/package.json
+++ b/app/package.json
@@ -1,35 +1,43 @@
 {
-  "name": "app",
+  "name": "react-explorer",
   "version": "0.0.1",
-  "description": "React Explorer",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ./lib ./client ./server --ext .js --ext .jsx",
+    "lintfix": "npm run lint -- --fix",
+    "testonly": "mocha client/**/tests/**/*.js --compilers js:babel-core/register",
+    "test": "npm run lint && npm run testonly",
+    "test-watch": "npm run testonly -- --watch --watch-extensions js,jsx"
   },
-  "author": "",
-  "license": "ISC",
+  "private": true,
   "dependencies": {
-    "normalize-scss": "^4.0.3",
-    "normalize.css": "^3.0.3",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "react-komposer": "^1.2.0",
+    "classnames": "^2.2.3",
+    "domready": "^1.0.8",
+    "lodash": "^4.1.0",
+    "mantra-core": "^1.2.0",
+    "material-ui": "^0.14.3",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "react-mounter": "^1.0.0",
-    "react-simple-di": "^1.0.0"
+    "react-no-ssr": "^1.0.1",
+    "react-tap-event-plugin": "^0.2.2",
+    "redux": "^3.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.4.0",
+    "babel-core": "^6.4.5",
     "babel-plugin-react-require": "^2.1.0",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
-    "chai": "^3.4.1",
-    "enzyme": "^1.3.1",
+    "babel-root-slash-import": "^1.0.0",
+    "chai": "^3.5.0",
+    "enzyme": "^1.4.1",
     "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.15.0",
-    "mocha": "^2.3.4",
-    "react-addons-test-utils": "^0.14.6",
-    "sinon": "^1.17.2"
+    "eslint-config-airbnb": "^5.0.0",
+    "eslint-plugin-react": "^3.16.1",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^0.14.7",
+    "sass-lint": "^1.5.0",
+    "sinon": "^1.17.3"
   }
 }
